syntax ="proto3";

package auth;

option go_package = "github.com/irvandMR/go-grpc-ecommerce-BE/pb/auth";

import "common/base_response.proto";
import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}



// Request and Response for Login
message LoginRequest {
  string email = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255, email: true}];
  string password = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
}

message LoginResponse {
    common.BaseResponse base = 1;
  string token = 2;
}


// Request and Response for Register
message RegisterRequest {
  string full_name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string email = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255, email: true}];
  string password = 3 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string password_confirmation = 4 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
}

message RegisterResponse {
  common.BaseResponse base = 1;
}

// Request and Response for Logout
message LogoutRequest {
}

message LogoutResponse {
  common.BaseResponse base = 1;
}

// Request and Response for Change Password
message ChangePasswordRequest {
  string current_password = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string new_password = 2 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string new_password_confirmation = 3 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
}
message ChangePasswordResponse {
  common.BaseResponse base = 1;
}

// Request and Response for Get Profile
message GetProfileRequest {
}

message GetProfileResponse {
  common.BaseResponse base = 1;
  string id = 2;
  string full_name = 3;
  string email = 4;
  string role_code = 5;
  google.protobuf.Timestamp member_since = 6;
}